--- a/lets/app/views/layouts/lets/application.html.erb
+++ b/lets/app/views/layouts/lets/application.html.erb
@@ -10,7 +10,8 @@
 
   <!-- Static navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/lets">LETS</a>
+    <!-- <a class="navbar-brand" href="/lets">LETS</a> -->
+    <%= link_to 'LETS Analyze', lets.root_path, class: 'navbar-brand' %>
     <button class="navbar-toggler" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -24,13 +25,14 @@
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
               role="button" data-toggle="dropdown" aria-haspopup="true"
               aria-expanded="false">
-            Lessons
+            LETS Learn
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="/design_study">Transect Design</a>
             <a class="dropdown-item" href="/collect_data">Data Collection</a>
             <a class="dropdown-item" href="/analyze_data">Data Analysis</a>
             <a class="dropdown-item" href="/graph_data">Visual Analysis</a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           </div>
         </li>
         <li class="nav-item dropdown">
