Quick name change

--- a/app/views/layouts/default/application.html.haml
+++ b/app/views/layouts/default/application.html.haml
@@ -9,7 +9,7 @@
     / Static navbar
     / https://awsm-tools.com/code/html2haml
     %nav.navbar.navbar-expand-lg.navbar-light.bg-light
-      %a.navbar-brand(href="/home") LETS Analyze
+      %a.navbar-brand(href="/home") LETS Learn
       %button.navbar-toggler(aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" data-target="#navbarSupportedContent" data-toggle="collapse" type="button")
         %span.navbar-toggler-icon
       #navbarSupportedContent.collapse.navbar-collapse
@@ -62,7 +62,7 @@
     .container
       = render 'default/shared/navigation'
       = yield
-
+    
     / Footer
     / https://mdbootstrap.com/components/bootstrap-footer/
     %footer.page-footer.font-small.pt-4.mt-4.bg-light
@@ -83,10 +83,9 @@
           .col-md-8
             %h4.text-uppercase LETS Analyze
             %p
-              This site
-              %strong LETS Analyze
+              %strong LETS Learn
               supports the
-              %a(href="http://lets-study.ch/") LETS Study
+              %a(href="http://lets-study.ch/") LETS Study Project
               by organizing and sharing the data for others
               to use and by providing learning materials for
               others to learn, participate and interpret
