Add the LETS name to the footer

--- a/app/views/layouts/default/application.html.haml
+++ b/app/views/layouts/default/application.html.haml
@@ -86,6 +86,8 @@
               %strong LETS Learn
               supports the
               %a(href="http://lets-study.ch/") LETS Study Project
+              %strong
+                %em (Local Environmental Transect Survey)
               by organizing and sharing the data for others
               to use and by providing learning materials for
               others to learn, participate and interpret
