--- a/lets/app/views/layouts/lets/application.html.erb
+++ b/lets/app/views/layouts/lets/application.html.erb
@@ -101,6 +101,9 @@
             <p>
               <strong>LETS Learn</strong> supports the
               <a href="http://lets-study.ch/">LETS Study Project</a>
+              <strong>
+                <em>(Local Environmental Transect Survey)</em>
+              </strong>
               by organizing and sharing the data for others
               to use and by providing learning materials for
               others to learn, participate and interpret
