finalize landing page

--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -1,24 +1,38 @@
-%h1 LETS Learn
+%h1
+  %small Overview
 
 %p
-  This site is designed to support citizen scientists interested in Enviornmental
-  Science.
+  This site is designed to support citizen scientists interested in
+  Enviornmental and Ecological Science and exploring climate change.
+  %br
   %strong PLEASE JOIN US!
+
 %p
-  This site:
+  %b LETS Learn
   %ul
     %li
-      Shares Collected
-      %a{href: "/data"} LETS Data
+      %a{href: "/data"} LETS Data -
+      Shares Collected Data
     %li
-      Shares info to Analyze and Interpret LETS Data -
-      %a{href: "/learn"} LETS Learn
-    %li Shares LETS Study Design information -- we hope you will join us!
-
-%h4
-  LETS
-  %small (Longitudinal Environmental Transect Survey)
-
+      %a{href: "/learn/analysis"} LETS Analyze -
+      Shares info to Analyze and Interpret
+    %li
+      %a{href: "/learn/design"} LETS Design -
+      Shares transect study design information
 %p
-  Study species distribution along a transect over elevations -- Longitudinally
-  %em (over time).
+  %strong
+    LETS -
+    %em (Longitudinal Elevation Transect Survey)
+  %br
+  Bi-annually, we
+  %strong survey
+  species distribution along a
+  %strong transect
+  %em (a fixed series of plots along line)
+  that changes signifigantly in
+  %strong elevation.
+  %br
+  This study will be done for many years to come -- allowing comparisons over
+  long-time spans.  Studies done over long periods in order to watch for
+  time-based changes are known as
+  %strong longitudinal studies.
