copy right for Container4 and sponsored for lets-study

--- a/app/views/layouts/default/application.html.haml
+++ b/app/views/layouts/default/application.html.haml
@@ -107,5 +107,9 @@
           .col-md-1
       / /.Footer Links
       .container-fluid.text-center
-        &copy 2018 Copyright:
-        %a(href="http://lets-study.ch/")LETS Study
+        &copy 2018 Copyright
+        %strong
+          %a(href="https://container4.ch") Contaner4
+        in support of the
+        %strong
+          %a(href="http://lets-study.ch/") LETS Study
