--- a/lets/app/views/layouts/lets/application.html.erb
+++ b/lets/app/views/layouts/lets/application.html.erb
@@ -132,8 +132,14 @@
 
       <!--Copyright-->
       <div class="footer-copyright py-1 text-center">
-          © 2018 Copyright:
-          <a href="http://lets-study.ch/"> LETS Study </a>
+        &copy 2018 Copyright
+        <strong>
+          <a href="https://container4.ch/">Container4</a>
+        </strong>
+        in support of the
+        <strong>
+          <a href="http://lets-study.ch/">LETS Study</a>
+        </strong>
       </div>
       <!--/.Copyright-->
 
