--- a/lets/app/views/layouts/lets/application.html.haml
+++ b/lets/app/views/layouts/lets/application.html.haml
@@ -12,6 +12,10 @@
     / = render :partial => "/layouts/navbar"
 
     .container
+      - flash.each do |key, value|
+        %div{:class => "#{flash_class(key.to_sym)}"}
+          = value
+
       = yield
 
     = render :partial => "layouts/footer"
