update home page

--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -1,28 +1,34 @@
-%h1
-  %small Overview
+%h1.text-center
+  LETS Learn
+  %br
+%h5.text-center
+  %em (Longitudinal Elevation Transect Study)
 
 %p
-  This site is designed to support citizen scientists interested in
-  Enviornmental and Ecological Science and exploring climate change.
+  This site is designed teach about and support citizen scientists
+  interested in Enviornmental and Ecological Science and exploring
+  long-term species and environmental changes at various elevations
+  (including less studied alpine environments).
+  %br
   %br
   %strong PLEASE JOIN US!
 
 %p
-  %b LETS Learn
+  %b LETS Learn -
+  shares the following information:
   %ul
     %li
       %a{href: "/data"} LETS Data -
-      Shares Collected Data
+      Shares Collected LETS Data
     %li
       %a{href: "/learn/analysis"} LETS Analyze -
-      Shares info to Analyze and Interpret
+      Shares info to Learn to Analyze and Interpret LETS Data
     %li
       %a{href: "/learn/design"} LETS Design -
-      Shares transect study design information
+      Shares transect study design information and create your own LETS Data
 %p
   %strong
-    LETS -
-    %em (Longitudinal Elevation Transect Survey)
+    Our Activities
   %br
   Bi-annually, we
   %strong survey
