remove duplicate notices

--- a/lets/app/views/lets/dashboard/index.html.haml
+++ b/lets/app/views/lets/dashboard/index.html.haml
@@ -1,5 +1,5 @@
 / <p id="notice"><%= notice %></p>
-%p{:id => "item"}= notice
+/ %p{:id => "item"}= notice
 
 / <h1>Data Dashboard</h1>
 %h1 Data Dashboard
