--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -50,9 +50,18 @@
           = link_to "Transects","#", class: "dropdown-item"
           = link_to "Tree Plots", "#", class: "dropdown-item"
           .dropdown-divider
-          = link_to 'Tree Observations', "#", class: "dropdown-item"                                              |
+          = link_to 'Tree Observations', "#", class: "dropdown-item"
 
-    / left login & username
+  /
+    left login & username
+    %ul.navbar-nav.ml-auto
+      %li.nav-item.dropdown
+        %a#navbarDropdown.nav-link.dropdown-toggle(aria-expanded="false" aria-haspopup="true" data-toggle="dropdown" href="#" role="button")
+          Login
+        .dropdown-menu(aria-labelledby="navbarDropdown")
+          = link_to 'Manage Data',  "/data/admin",  class: "nav-link"
+          = link_to 'Manage Learn', "/learn/admin", class: "nav-link"
+  /
     %ul.navbar-nav.ml-auto
       %li.nav-item
         = link_to 'Login', "/learn/admin", class: "nav-link"
