fixed engine login link (if needed)

--- a/lets/app/views/layouts/lets/_navbar.html.haml
+++ b/lets/app/views/layouts/lets/_navbar.html.haml
@@ -58,7 +58,7 @@
         %a#navbarDropdown.nav-link.dropdown-toggle(aria-expanded="false" aria-haspopup="true" data-toggle="dropdown" href="#" role="button")
           Login
         .dropdown-menu(aria-labelledby="navbarDropdown")
-          = link_to 'Data Login',  "/data/admin",  class: "nav-link"
+          = link_to 'Data Login',  "/data/managers/sign_in",  class: "nav-link"
           .dropdown-divider
   /
     %ul.navbar-nav.ml-auto
