--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -57,7 +57,7 @@
       %li.nav-item.dropdown
         %a#navbarDropdown.nav-link.dropdown-toggle(aria-expanded="false" aria-haspopup="true" data-toggle="dropdown" href="#" role="button")
           Login
-        .dropdown-menu(aria-labelledby="navbarDropdown")
+        .dropdown-menu.dropdown-menu-right(aria-labelledby="navbarDropdown")
           = link_to 'Manage Data',  "/data/managers/sign_in",  class: "nav-link"
           = link_to 'Manage Learn', "/learn/admin", class: "nav-link"
   /
