--- a/lets/app/views/layouts/lets/_navbar.html.haml
+++ b/lets/app/views/layouts/lets/_navbar.html.haml
@@ -57,7 +57,7 @@
       %li.nav-item.dropdown
         %a#navbarDropdown.nav-link.dropdown-toggle(aria-expanded="false" aria-haspopup="true" data-toggle="dropdown" href="#" role="button")
           Login
-        .dropdown-menu(aria-labelledby="navbarDropdown")
+        .dropdown-menu.dropdown-menu-right(aria-labelledby="navbarDropdown")
           = link_to 'Data Login',  "/data/managers/sign_in",  class: "nav-link"
           .dropdown-divider
   /
